--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
+    "@next/third-parties": "^14.2.12",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
     "embla-carousel-auto-scroll": "^8.2.0",
