--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "next": "14.2.5",
+    "next-sitemap": "^4.2.3",
     "rc-progress": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
